# sylver-cli

./: pyproject.toml
.github/workflows/: wheels.yml
