[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sylver"
version = "0.3.4"
description = "Multi-language programmable linter"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }

[tool.maturin]
bindings = "bin"
manifest-path = "crates/sylver-cli/Cargo.toml"
module-name = "sylver"
python-source = "python"
strip = true
