[build-system]
requires = ["maturin<1.0"]
build-backend = "maturin"

[tool.poetry]
name = "sylver"
version = "0.3.4"
authors = ["sylver-dev"]
description = "Multi-language programmable linter"
readme = "README.md"
license = "LICENSE.txt"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/sylver-cli/Cargo.toml"
module-name = "sylver"
python-source = "python"
strip = true
